# booplang

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  format.sh  install-hooks.sh  lc.sh  meson.build  sz.py
docs/: how.md  ir.md  language.md
examples/: basic.boop  basic.boopir
include/: ast.h  intern.h  ir.h  lexer.h  token.h  trie.h  unordered_map.h  utils.h  vector.h
src/: Makefile  ast.c  ast.h  boopc  intern.c  intern.h  ir.c  ir.h  lexer.c  main.c  trie.c  trie.h  unordered_map.c  utils.c  utils.h  vector.c
